@@ -18,12 +18,12 @@
     
     <ul>
       <li><a name='#server_pc'>Server</a> - This computer is the brains
-        behind the whole system.  It contains the database and the webserver.
-        This is also the computer that requires the most horsepower.  The
-        minimum hardware that I've successfully run the server on is a
-        Pentium 166Mhz with 64MB of memory, however it was rather slow.  I
-        would suggest at least a Pentium-II 333Mhz with 64MB of RAM, 128MB of
-        RAM is preferred.  A network card is required for this machine.
+      behind the whole system.  It contains the database and the webserver.
+      This is also the computer that requires the most horsepower.  The
+      minimum hardware that I've successfully run the server on is a
+      Pentium 166Mhz with 64MB of memory, however it was rather slow.  I
+      would suggest at least a Pentium-II 233Mhz or Pentium Pro 200Mhz with
+      128MB of RAM.  A network card is required for this machine.
         <ol>
           <li><a href="#java">Java</a></li>
           <li><a href="#tomcat">Apache Tomcat</a></li>
@@ -35,7 +35,7 @@
 
       <li><a name='#display_pc'>Display Computer</a> - This computer is
       used to display scores, either on it's screen or on an LCD projector.
-      LCD projector is recommended.  I've used a Pentium 166Mhz with 32MB
+      LCD projector is recommended.  I've used a Pentium 133Mhz with 32MB
       RAM for this function at the state tournament without problems, so
       anything that powerful or greater would work fine.  The important
       part here is that the display be good.  The monitor/projector and
@@ -53,7 +53,7 @@
       <li><a name='#performance_pc'>Performance score entry</a> - This
       computer is used to enter performance scores.  Again a Pentium 166Mhz
       with 32MB RAM should be ok, but more is better.  Especially if
-      Windows 2000 or Windows XP is being used.  Windows 95 or Linux use
+      Windows 2000 or Windows XP is being used.  Windows 95/98 or Linux use
       less resources and so would be good choices if a lower end machine is
       used.  Here display is also important.  The monitor and video card
       need to be capable of at least 1024x768.  More is definatly better
